# ragen

./: .gitignore  Makefile  README.md  build.envd  essay_great_work.txt  essay_what_work_on.txt  pyproject.toml
.github/workflows/: check.yml  release.yml
examples/: arxiv_abstract.py  emb.py
ragen/: args.py  client.py  cmd.py  emb.py  file.py  llm.py
