[project]
name = "ragen"
dynamic = ["version"]
description = "Retrieval Augmented Generation."
authors = [{ name = "Keming", email = "kemingy94@gmail.com" }]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "openai",
    "torch",
    "transformers",
    "sentence-transformers",
]
[project.optional-dependencies]
dev = [
    "ruff",
    "black",
]
[project.urls]
"Homepage" = "https://github.com/kemingy/ragen"
[project.scripts]
"ragen" = "ragen.cmd:main"

[build-system]
requires = ["setuptools", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "ragen/__version__.py"

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "B", "I", "SIM", "TID", "PL"]
[tool.ruff.pylint]
max-branches = 35
max-statements = 100

[tool.black]
line-length = 88
